# zkill-ws-importer

./: .gitignore  Cargo.toml  Dockerfile
.aws/: task-definition.json
.github/workflows/: aws.yml  docker-image.yml  ghcr-publish.yml
.github/workflows/.aws/: task-definition.json
dev/: export.ps1  restart-rebuild-app.ps1  setup.ps1
prod/: prod_config.json
src/: database.rs  main.rs
src/examples/: async_adjusted print.rs.txt  async_example.rs.txt  sync_example.rs.txt
src/models/: app_config.rs  config.rs  mod.rs  zkillboard.rs
workingDir/: config.json
working_dir/: dev_config.json
