[package]
name = "zkill-ws-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.23.1", features = ["full"] }
futures-util = "0.3.25"
futures-channel = "0.3.25"
url = "2.3.1"
mongodb = "2.3.1"
serde_json = "1.0.89"
serde = "1.0.147"
tungstenite = "0.18.0"
prometheus = { version = "0.13.3", features = ["process", "push"] }
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
