[package]
name = "zkill-ws-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"
futures-channel = "0.3.26"
url = "2.3.1"
mongodb = "2.3.1"
serde_json = "1.0.91"
serde = "1.0.152"
tungstenite = "0.18.0"
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16",  features = ["std", "fmt", "json"] }
